@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1046</width>
-    <height>725</height>
+    <width>615</width>
+    <height>672</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -42,7 +42,7 @@
         <property name="toolTip">
          <string>Specify the name of the file to import.</string>
         </property>
-        <property name="clearButtonEnabled">
+        <property name="clearButtonEnabled" stdset="0">
          <bool>true</bool>
         </property>
        </widget>
@@ -75,41 +75,6 @@
       <string>Options</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <property name="leftMargin">
-       <number>9</number>
-      </property>
-      <property name="topMargin">
-       <number>9</number>
-      </property>
-      <property name="rightMargin">
-       <number>9</number>
-      </property>
-      <property name="bottomMargin">
-       <number>9</number>
-      </property>
-      <property name="horizontalSpacing">
-       <number>6</number>
-      </property>
-      <property name="verticalSpacing">
-       <number>7</number>
-      </property>
-      <item row="1" column="0">
-       <widget class="QLabel" name="lMatrixVHeader">
-        <property name="text">
-         <string>Export vertical header:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QCheckBox" name="chkMatrixVHeader">
-        <property name="text">
-         <string/>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="lExportHeader">
         <property name="text">
@@ -117,7 +82,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="1">
        <widget class="QCheckBox" name="chkExportHeader">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -133,6 +98,23 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="lMatrixVHeader">
+        <property name="text">
+         <string>Export vertical header:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="chkMatrixVHeader">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="0">
        <widget class="QLabel" name="lMatrixHHeader">
         <property name="text">
@@ -140,7 +122,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
+      <item row="2" column="1">
        <widget class="QCheckBox" name="chkMatrixHHeader">
         <property name="text">
          <string/>
@@ -153,11 +135,11 @@
       <item row="3" column="0">
        <widget class="QLabel" name="lSeparator">
         <property name="text">
-         <string>Separating character:</string>
+         <string>Separating string:</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
+      <item row="3" column="1">
        <widget class="KComboBox" name="cbSeparator">
         <property name="editable">
          <bool>true</bool>
@@ -165,13 +147,23 @@
        </widget>
       </item>
       <item row="4" column="0">
+       <widget class="QLabel" name="lNumberFormat">
+        <property name="text">
+         <string>Number format:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QComboBox" name="cbNumberFormat"/>
+      </item>
+      <item row="5" column="0">
        <widget class="QLabel" name="lGridLines">
         <property name="text">
          <string>Grid lines:</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="2">
+      <item row="5" column="1">
        <widget class="QCheckBox" name="chkGridLines">
         <property name="text">
          <string/>
@@ -181,14 +173,14 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
+      <item row="6" column="0">
        <widget class="QLabel" name="lCaptions">
         <property name="text">
          <string>Table captions:</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="2">
+      <item row="6" column="1">
        <widget class="QCheckBox" name="chkCaptions">
         <property name="text">
          <string/>
@@ -198,21 +190,14 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="2">
-       <widget class="QCheckBox" name="chkEmptyRows">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0">
+      <item row="7" column="0">
        <widget class="QLabel" name="lHeader">
         <property name="text">
          <string>Headers:</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="2">
+      <item row="7" column="1">
        <widget class="QCheckBox" name="chkHeaders">
         <property name="text">
          <string/>
@@ -222,41 +207,48 @@
         </property>
        </widget>
       </item>
-      <item row="8" column="2">
-       <widget class="QComboBox" name="cbLaTeXExport"/>
-      </item>
-      <item row="7" column="0">
+      <item row="8" column="0">
        <widget class="QLabel" name="lEmptyRows">
         <property name="text">
          <string>Skip empty rows:</string>
         </property>
        </widget>
       </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="lExportToFITS">
+      <item row="8" column="1">
+       <widget class="QCheckBox" name="chkEmptyRows">
         <property name="text">
-         <string>Export to:</string>
+         <string/>
         </property>
        </widget>
       </item>
-      <item row="9" column="2">
-       <widget class="QComboBox" name="cbExportToFITS"/>
-      </item>
-      <item row="8" column="0">
+      <item row="9" column="0">
        <widget class="QLabel" name="lExportArea">
         <property name="text">
          <string>Area to export:</string>
         </property>
        </widget>
       </item>
+      <item row="9" column="1">
+       <widget class="QComboBox" name="cbLaTeXExport"/>
+      </item>
       <item row="10" column="0">
+       <widget class="QLabel" name="lExportToFITS">
+        <property name="text">
+         <string>Export to:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="1">
+       <widget class="QComboBox" name="cbExportToFITS"/>
+      </item>
+      <item row="11" column="0">
        <widget class="QLabel" name="lColumnAsUnits">
         <property name="text">
          <string>Comments as column units:</string>
         </property>
        </widget>
       </item>
-      <item row="10" column="2">
+      <item row="11" column="1">
        <widget class="QCheckBox" name="chkColumnsAsUnits">
         <property name="text">
          <string/>
